--- a/trunk/app/views/users/hot.html.erb
+++ b/trunk/app/views/users/hot.html.erb
@@ -727,7 +727,7 @@ unfollowAllFollows();
 }
 }
 $('#jquery-certufyPersonCu .hotbutton').live("click",function(){
-var loginUserId = 0;
+var loginUserId = <%=raw current_user ? current_user.id.to_s.to_json : 0 %>;
 if (loginUserId == 0) {
 var _path = window.location.pathname;
 var flag = consts("REGIST_TYPE_STATION_GET");
@@ -758,7 +758,7 @@ $("#allFollows").removeClass();
 $("#allFollows").addClass("btn-xlarge-unfollow");
 });
 $('#jquery-certufyPerson .hotbutton').live("click",function(){
-var loginUserId = 0;
+var loginUserId = <%=raw current_user ? current_user.id.to_s.to_json : 0 %>;
 if (loginUserId == 0) {
 var _path = window.location.pathname;
 var flag = consts("REGIST_TYPE_STATION_GET");
