邀请页面骨架和我要上传对话框

--- a/trunk/app/assets/stylesheets/ktv/__zm.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/__zm.css.scss.erb
@@ -4869,6 +4869,18 @@
   .dialog3 .dia-login a.github em {
       background-position: left -275px
   }
+  .dialog3 .dia-login a.youku em {
+      background-position: left -362px
+  }
+  .dialog3 .dia-login a.emule em {
+      background-position: left -402px
+  }
+  .dialog3 .dia-login a.sina em {
+      background-position: left -446px
+  }
+  .dialog3 .dia-login a.upload em {
+      background-position: left -490px
+  }
   .dialog3 .dia-note {
       border-top: 1px dashed #cacaca;
       width: 328px;
