--- a/trunk/app/assets/stylesheets/ktv/overwritting.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/overwritting.css.scss.erb
@@ -83,3 +83,15 @@
 body{
   margin:0
 }
+.__zm .dialog3 .dia-psvr a{
+width: 272px;  
+padding-left: 22px;
+background-position:0 -145px;
+  &:hover{
+  background-position:0 -184px;  
+  }
+}
+
+.__zm .dialog3 .dia-psvr li{
+  width:282px;
+}
