--- a/trunk/app/views/welcome/index.html.erb
+++ b/trunk/app/views/welcome/index.html.erb
@@ -1410,7 +1410,7 @@
 <!-- 好店 -->
 <div id="goodverb">
 <div class="goodshop cf">
-<h2 class="itemhead"><a href="/certify/shop/1" class="more">更多</a><span class="greenline size_6"><span class="item-title"><b class="blue">你</b>可能感兴趣</span></span></h2>
+<h2 class="itemhead"><a href="/certify/shop/1" class="more">更多</a><span class="greenline size_6"><span class="item-title"><b class="blue">你可能感兴趣的</b>领域</span></span></h2>
 <ul>
 
 <li>
