--- a/trunk/app/assets/javascripts/ktv/pin.js.erb
+++ b/trunk/app/assets/javascripts/ktv/pin.js.erb
@@ -4277,10 +4277,128 @@ im.zm.autoLayout.prototype = {
     addEvent: function () {},
     scrollEvent: function () {}
 };
+im.zm.newcw = function () {
+    var g, f, c;
+    g = [
+    	'<div class="dialogbody dia-landing cf">',
+    	'<div class="dia-left" style="height:388px;">',
+    	'<div class="dia-guid f18 yahei orange">我要上传分享课件</div>',
+    	'<div class="dia-desc">1、对于网上已有的课件，只需贴一个链接，系统即可自动导入</div>',
+    	'<ul class="dia-login cf dia-psvr" id="js-log2">',
+    	'<li><a class="youku" href="#"><em class="png">视频网站视频（如优酷,土豆）</em></a></li>',
+    	'<li><a class="emule" href="#"><em class="png">原始下载地址（如http,ed2k）</em></a></li>',
+    	'<li><a class="sina" href="#"><em class="png">外站资源链接（如新浪爱问）</em></a></li>',
+    	"</ul>",
+    	'<div class="dia-desc" style="padding:0;margin:10px 0 -5px">2、上传文件，虽然稍微麻烦一点，但绝对靠谱：）</div>',
+    	'<ul class="dia-login cf dia-psvr" id="js-log3" style="margin-top: 18px;"><li><a class="upload" href="/account/auth/renren"><em class="png">上传课件</em></a></li></ul>',
+    	'<div class="dia-zmbottom cf">',
+    	"</div>",
+    	"</div>",
+    	'</div>'
+    ].join("");
+    var e, a;
+    if (arguments.length > 0) {
+        a = arguments[0]
+    } else {
+        e = document.location.href;
+        a = e.replace(new RegExp("http://" + document.location.host), "")
+    }
+    $("#loginLayout").definedDialog({
+        title: "",
+        width: 400,
+        height: 0,
+        showClose: !0,
+        open: !1,
+        modal: !0,
+        show: "normal",
+        buttons: null,
+        html: g,
+        dialogClass: "dialog3",
+        closeCallBack: function () {
+            try {
+                _gaq.push(["_trackPageview", "/c_l_c/" + a])
+            } catch (h) {}
+        }
+    });
+    $("#js-log2 .youku").attr("href", "/coursewares/new_youku");
+    $("#js-log2 .emule").attr("href", "/coursewares/new_emule");
+    $("#js-log2 .sina").attr("href", "/coursewares/new_sina");
+    $("#js-log3 .upload").attr("href", "/coursewares/new");
+};
 im.zm.login = function () {
     var g, f, c;
-    g = ['<div class="dialogbody dia-landing cf">', '<div class="dia-left" style="height:360px;">', '<div class="dia-guid f18 yahei orange">登录/注册新用户</div>', '<div class="dia-desc">1、如果您已经有以下网站的账号，可直接登录</div>', '<ul class="dia-login cf" id="js-log">', '<li><a class="sina" href="#"><em class="png">新浪微博</em></a></li>', '<li><a class="qzone" href="#"><em class="png">腾讯QQ</em></a></li>', '<li><a class="renren" href="#"><em class="png">人人网</em></a></li>', '<li><a class="douban" href="#"><em class="png">豆瓣</em></a></li>', '<li><a class="google" href="#"><em class="png">Google</em></a></li>', '<li><a class="github" href="#"><em class="png">Github</em></a></li>', "</ul>", '<div class="dia-desc" style="padding:0;margin:10px 0 -5px">2、或者您可以使用您的电子邮箱登录或注册新用户</div>', '<div class="dia-zmbottom cf">', '<p class="floatleft f14"><a id="hasZM" href="javascript:void(0);">使用电子邮箱登录</a> / <a href="#" id="register">注册新用户</a></p>', "</div>", "</div>", '</div>'].join("");
-    f = ['<div class="dialogbody dia-landing cf">', '<div class="dia-left" style="height:380px;" id="zmjsDiaLeft">', '<div class="dia-guid f18 yahei orange">使用电子邮箱登录/注册</div>', '<form accept-charset="UTF-8" action="/account/sign_in" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="'+$('meta[name=csrf-token]').attr('content')+'" /></div><input type="hidden" name="redirect_to" value="'+window.location.pathname+'"/>',"<table>", '<colgroup><col width="70"><col width="*"></colgroup>', "<tr>", '<td class="tdleft">邮箱：</td>', '<td class="tdmail">', '<span class="ioginInput">', '<span class="innerborder">', '<input type="text" class="deftest" id="userEmail" name="user[email]" value="" onfocus="im.user.validate.thisFocus(this , \'请输入注册邮箱\');"/>', "</span>", "</span>", '<span class="errortips" id="errortips1"></span></td>', "</tr>", "<tr>", '<td class="tdleft">密码：</td>', '<td class="tdpassword">', '<span class="ioginInput">', '<span class="innerborder"><input type="password" maxlength="16" class="deftest" id="userPassword" name="user[password]" onfocus="im.user.validate.thisFocus(this , \'请输入密码\');"  onblur="im.user.validate.checkPassword(this , false);"/></span>', "</span>", '<span class="errortips" id="errortips2"></span>', "</td>", "</tr>", '<tr id="kapchaTr" style="display:none;">', '<td class="tdleft">验证码：</td>', "<td>", '<span class="ioginInput kap" style="width:100px;vertical-align:middle">', '<span class="innerborder" style="margin-right:10px;"><input type="text" class="deftest" id="captcha" style="width:85px ;float:left\9; " name="captcha" maxlength="4" />', "</span>", "</span>", '<span id="imgSpan" style="vertical-align:middle;"><img id="verifyImg" /></span>', '<span id="changePic"  class="blue" style="cursor:pointer; margin-left:6px">换一张</span><span id="kaptchaTip" class="false stata" style="width:110px ;font-size:12px ; margin-left:4px; vertical-align: text-bottom;  vertical-align: middle\9;display:none"></span>', "</td>", "</tr>", "<tr>", "<td></td>", '<td class="dia-autologin"><input type="checkbox" id="userKeepLogin" name="userKeepLogin" checked="checked" /><label for="autologin">下次自动登录</label></td>', "</tr>", "<tr>", "<td></td>", '<td class="dia-button"><a href="javascript:void(0)" id="js-login" class="btn-login">登录</a></td>', "</tr>", "</table></form>", '<div class="dia-zmbottom2">', '<p class="blue"><a href="/register">注册新用户</a><br><a href="/account/password/new">忘记密码？</a><br><a href="/account/confirmation/new">重发激活邮件</a> / <a href="/account/unlock/new">索取解锁邮件</a><br><a href="javascript:void(0)" id="hasMZ">使用合作网站帐号登录</a></p>', "</div>", "</div>","</div>"].join("");
+    g = [
+    	'<div class="dialogbody dia-landing cf">',
+    	'<div class="dia-left" style="height:360px;">',
+    	'<div class="dia-guid f18 yahei orange">登录/注册新用户</div>',
+    	'<div class="dia-desc">1、如果您已经有以下网站的账号，可直接登录</div>',
+    	'<ul class="dia-login cf" id="js-log">',
+    	'<li><a class="sina" href="#"><em class="png">新浪微博</em></a></li>',
+    	'<li><a class="qzone" href="#"><em class="png">腾讯QQ</em></a></li>',
+    	'<li><a class="renren" href="#"><em class="png">人人网</em></a></li>',
+    	'<li><a class="douban" href="#"><em class="png">豆瓣</em></a></li>',
+    	'<li><a class="google" href="#"><em class="png">Google</em></a></li>',
+    	'<li><a class="github" href="#"><em class="png">Github</em></a></li>',
+    	"</ul>",
+    	'<div class="dia-desc" style="padding:0;margin:10px 0 -5px">2、或者您可以使用您的电子邮箱登录或注册新用户</div>',
+    	'<div class="dia-zmbottom cf">',
+    	'<p class="floatleft f14"><a id="hasZM" href="javascript:void(0);">使用电子邮箱登录</a> / <a href="#" id="register">注册新用户</a></p>',
+    	"</div>",
+    	"</div>",
+    	'</div>'
+    ].join("");
+    f = [
+    	'<div class="dialogbody dia-landing cf">',
+    	'<div class="dia-left" style="height:380px;" id="zmjsDiaLeft">',
+    	'<div class="dia-guid f18 yahei orange">使用电子邮箱登录/注册</div>',
+    	'<form accept-charset="UTF-8" action="/account/sign_in" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="'+$('meta[name=csrf-token]').attr('content')+'" /></div><input type="hidden" name="redirect_to" value="'+window.location.pathname+'"/>',
+    	"<table>",
+    	'<colgroup><col width="70"><col width="*"></colgroup>',
+    	"<tr>",
+    	'<td class="tdleft">邮箱：</td>',
+    	'<td class="tdmail">',
+    	'<span class="ioginInput">',
+    	'<span class="innerborder">',
+    	'<input type="text" class="deftest" id="userEmail" name="user[email]" value="" onfocus="im.user.validate.thisFocus(this , \'请输入注册邮箱\');"/>',
+    	"</span>",
+    	"</span>",
+    	'<span class="errortips" id="errortips1"></span></td>',
+    	"</tr>",
+    	"<tr>",
+    	'<td class="tdleft">密码：</td>',
+    	'<td class="tdpassword">',
+    	'<span class="ioginInput">',
+    	'<span class="innerborder"><input type="password" maxlength="16" class="deftest" id="userPassword" name="user[password]" onfocus="im.user.validate.thisFocus(this , \'请输入密码\');"  onblur="im.user.validate.checkPassword(this , false);"/></span>',
+    	"</span>",
+    	'<span class="errortips" id="errortips2"></span>',
+    	"</td>",
+    	"</tr>",
+    	'<tr id="kapchaTr" style="display:none;">',
+    	'<td class="tdleft">验证码：</td>',
+    	"<td>",
+    	'<span class="ioginInput kap" style="width:100px;vertical-align:middle">',
+    	'<span class="innerborder" style="margin-right:10px;"><input type="text" class="deftest" id="captcha" style="width:85px ;float:left\9; " name="captcha" maxlength="4" />',
+    	"</span>",
+    	"</span>",
+    	'<span id="imgSpan" style="vertical-align:middle;"><img id="verifyImg" /></span>',
+    	'<span id="changePic"  class="blue" style="cursor:pointer; margin-left:6px">换一张</span><span id="kaptchaTip" class="false stata" style="width:110px ;font-size:12px ; margin-left:4px; vertical-align: text-bottom;  vertical-align: middle\9;display:none"></span>',
+    	"</td>",
+    	"</tr>",
+    	"<tr>",
+    	"<td></td>",
+    	'<td class="dia-autologin"><input type="checkbox" id="userKeepLogin" name="userKeepLogin" checked="checked" /><label for="autologin">下次自动登录</label></td>',
+    	"</tr>",
+    	"<tr>",
+    	"<td></td>",
+    	'<td class="dia-button"><a href="javascript:void(0)" id="js-login" class="btn-login">登录</a></td>',
+    	"</tr>",
+    	"</table></form>",
+    	'<div class="dia-zmbottom2">',
+    	'<p class="blue"><a href="/register">注册新用户</a><br><a href="/account/password/new">忘记密码？</a><br><a href="/account/confirmation/new">重发激活邮件</a> / <a href="/account/unlock/new">索取解锁邮件</a><br><a href="javascript:void(0)" id="hasMZ">使用合作网站帐号登录</a></p>',
+    	"</div>",
+    	"</div>",
+    	"</div>"
+    ].join("");
     var e, a;
     if (arguments.length > 0) {
         a = arguments[0]
