邀请做完啦

--- a/trunk/app/assets/javascripts/ktv/ie/application.js.erb
+++ b/trunk/app/assets/javascripts/ktv/ie/application.js.erb
@@ -11,7 +11,10 @@
 // GO AFTER THE REQUIRES BELOW.
 //
 //= require jquery
+//= require jquery_ujs
 //= require jquery.zclip
+//= require jquery.timeago
+//= require jquery.timeago.settings
 //= require ./plugins.js
 //= require ./main
 //= require ./check
