--- a/trunk/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/trunk/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,10 +1,10 @@
-<p><%= @resource.name %>：</p>
+<p><%= @vip.name %>：</p>
 
 <p>　　您好！谢谢您注册加入Kejian.TV课件交流系统！</p>
 
 <p>　　请点击下面的链接确认您的注册:</p>
 
-<p>　　<%= link_to confirmation_url(@resource, :confirmation_token => @resource.confirmation_token), confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
+<p>　　<%= link_to confirmation_url(@vip, :confirmation_token => @vip.confirmation_token), confirmation_url(@vip, :confirmation_token => @vip.confirmation_token) %></p>
 
 <p>　　如果您有任何题，可以直接回复本邮件，我们会热心为您解答。意见或建议也欢迎哦：）</p>
 
