邀请进一步优化1

--- a/trunk/app/views/application/footers/_qa_footer.html.erb
+++ b/trunk/app/views/application/footers/_qa_footer.html.erb
@@ -5,6 +5,6 @@
   <a href="/cpanel">后台管理</a>
 
   <div class="copyright">
-    版权所有 <span class="en">&copy;</span> 2012 <a href="http://<%=Setting.ktv_domain%>">Kejian.TV</a>. 课件著作权为原作者所有.
+    版权所有 <span class="en">&copy;</span> <%= Time.now.year %> <a href="http://<%=Setting.ktv_domain%>">Kejian.TV</a>. 课件著作权为原作者所有.
   </div>
 </footer>
