--- a/trunk/app/views/application/footers/_abt_footer.html.erb
+++ b/trunk/app/views/application/footers/_abt_footer.html.erb
@@ -1,4 +1,4 @@
-<div id="copy"><p>版权所有 &copy; 2012 Kejian.TV. <a href="/">返回首页</a> /
+<div id="copy"><p>版权所有 &copy; <%= Time.now.year %> Kejian.TV. <a href="/">返回首页</a> /
 	   <a href="/welcome/shuffle">手气不错</a> /
      <a href="/welcome/about#ktv">关于我们</a> /
      <a href="/cpanel">后台管理</a>.
