--- a/trunk/app/views/application/footers/_footer__ibeike.html.erb
+++ b/trunk/app/views/application/footers/_footer__ibeike.html.erb
@@ -3,5 +3,5 @@
 <a href="http://wiki.ibeike.com/index.php/iBeiKe%E5%9B%A2%E9%98%9F" target="_blank">关于我们</a> |
 <a href="http://team.ibeike.com" target="_blank">联系我们</a>
 </p>
-           <p>&copy;iBeiKe 2012 All Rights Reserved</p>
+           <p>&copy;iBeiKe <%= Time.now.year %> All Rights Reserved</p>
   </div>
