--- a/trunk/app/views/devise_mailer/invitation_instructions.html.erb
+++ b/trunk/app/views/devise_mailer/invitation_instructions.html.erb
@@ -12,7 +12,7 @@
     <table width="1" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:10px;font-size:10px;line-height:10px;">&nbsp;</div></td></tr></tbody></table>
   </td></tr>
   <tr><td align="left">
-    <img width="98" height="24" border="0" src="<%= asset_path('logo_white.png') %>">
+    <img width="159" height="35" border="0" src="<%= mk_url(asset_path('logo_white.png')) %>">
   </td></tr>
   <tr><td>
     <table width="1" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:10px;font-size:10px;line-height:10px;">&nbsp;</div></td></tr></tbody></table>
@@ -23,16 +23,20 @@
   <table width="100%" cellspacing="0" cellpadding="0" border="0" style="font-family:Arial;">
     <tbody><tr>
         <td width="50" valign="top" rowspan="3">
-            <img width="40" height="40" border="0" src="http://m3.licdn.com/media/p/3/000/122/17f/2237a33.jpg" style="padding:5px">
+            <img width="50" height="50" border="0" src="<%= mk_url(avatar_url(@invitor,:mid)) %>" style="padding:5px">
         </td>
         <td rowspan="3"><table width="1" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:0px;font-size:0px;line-height:0px;">&nbsp;</div></td></tr></tbody></table></td>
       <td style="font-family:Arial,sans-serif;font-size:12px">
         <div>
-          <b style="font-size:16px;margin-right:12px">From <%= @invitor.name %></b>
+          <b style="font-size:16px;margin-right:12px">来自<%= @invitor.name %>的邀请</b>
         </div>
            <table width="1" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:6px;font-size:6px;line-height:6px;">&nbsp;</div></td></tr></tbody></table>
-           <div style="color:#666666">Ruby Engineer at Zhaopin.com</div>
-            <div style="color:#666666">China</div>
+           <% if @invitor.tagline.present? %>
+             <div style="color:#666666"><%= @invitor.tagline %></div>
+           <% end %>
+           <% if @invitor.location.present? %>
+            <div style="color:#666666"><%= @invitor.location %></div>
+           <% end %>
         <table width="1" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:16px;font-size:16px;line-height:16px;">&nbsp;</div></td></tr></tbody></table>
       </td>
     </tr>
@@ -44,11 +48,11 @@
           <td><table width="5" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:0px;font-size:0px;line-height:0px;">&nbsp;</div></td></tr></tbody></table></td>
           <td style="font-family:Arial,sans-serif;font-size:12px">
             <p>
-              Minqi,<br>
+              <%= @vip.name %>,<br>
 <br>
-I'd like to add you to my professional network on LinkedIn.<br>
+我想在课件交流系统上加你为我的学习好友。<br>
 <br>
-- Minqi
+- <%= @invitor.name %>
             </p>
           </td>
           <td><table width="5" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:0px;font-size:0px;line-height:0px;">&nbsp;</div></td></tr></tbody></table></td>
@@ -60,7 +64,7 @@ I'd like to add you to my professional network on LinkedIn.<br>
     <tr>
       <td>
         <table width="1" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:12px;font-size:12px;line-height:12px;">&nbsp;</div></td></tr></tbody></table>
-          <table cellspacing="1" cellpadding="6" border="0" align=""><tbody><tr><td valign="middle" bgcolor="#FFE86C" background="http://www.linkedin.com/scds/common/u/img/bg/yellow_button_back.png" align="center" style="background:url(http://www.linkedin.com/scds/common/u/img/bg/yellow_button_back.png) repeat-x scroll 100% 0 #FFE86C;background-color:#FFE86C;border:1px solid #E8B463;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;"><div style="padding-right:10px;padding-left:10px;"><a style="text-decoration:none;" href="https://www.linkedin.com/e/25tw81-h51aetj5-17/isd/5322101210/tOiRnTIz/?hs=false&amp;tok=2mWQHgPGDlB5k1" target="_blank"><span style="font-size:12px;font-family:Arial;font-weight:bold;color:#333333;white-space:nowrap;display:block;">Confirm that you know Minqi</span></a></div></td></tr></tbody></table>
+          <table cellspacing="1" cellpadding="6" border="0" align=""><tbody><tr><td valign="middle" bgcolor="#FFE86C" background="<%= mk_url(asset_path('yellow_button_back.png')) %>" align="center" style="background:url(<%= mk_url(asset_path('yellow_button_back.png')) %>) repeat-x scroll 100% 0 #FFE86C;background-color:#FFE86C;border:1px solid #E8B463;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;"><div style="padding-right:10px;padding-left:10px;"><a style="text-decoration:none;" href="<%= confirmation_url(@vip, :confirmation_token => @vip.confirmation_token) %>" target="_blank"><span style="font-size:12px;font-family:Arial;font-weight:bold;color:#333333;white-space:nowrap;display:block;">确认您认识<%= @invitor.name %></span></a></div></td></tr></tbody></table>
       </td>
     </tr>
   </tbody></table>
@@ -69,8 +73,8 @@ I'd like to add you to my professional network on LinkedIn.<br>
 <table cellspacing="0" cellpadding="0" border="0" style="font-family:Arial;width:550px">
   <tbody><tr>
     <td style="color:#999;font-family:Arial,sans-serif;font-size:11px;line-height:15px">
-      <div>You are receiving Invitation to Connect emails. <a href="http://www.linkedin.com/e/25tw81-h51aetj5-17/qn_EMP9eFA55qwWt7gZEmR/goo/pmq20%40qq%2Ecom/20061/I2692043432_1/?hs=false&amp;tok=3vyCgPkCTlB5k1" target="_blank">Unsubscribe</a></div>
-      <div>&copy; 2012, LinkedIn Corporation. 2029 Stierlin Ct. Mountain View, CA 94043, USA<table width="1" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:1px;font-size:1px;line-height:1px;">&nbsp;</div></td></tr></tbody></table></div>
+      <div>您收到的是由课件交流系统发出的自动邮件. <a href="http://<%= Setting.ktv_domain %><%= edit_user_registration_path %>#mail_settings" target="_blank">取消订阅</a></div>
+      <div>&copy; <%= Time.now.year %>, Kejian.TV. 课件交流系统.<table width="1" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:1px;font-size:1px;line-height:1px;">&nbsp;</div></td></tr></tbody></table></div>
     </td>
   </tr>
 </tbody></table>
