邀请进一步优化3

--- a/trunk/app/views/devise_mailer/invitation_instructions.html.erb
+++ b/trunk/app/views/devise_mailer/invitation_instructions.html.erb
@@ -50,7 +50,7 @@
             <p>
               <%= @vip.name %>,<br>
 <br>
-我想在课件交流系统上加你为我的学习好友。<br>
+我想在课件交流系统上加你为我的学习伙伴。<br>
 <br>
 - <%= @invitor.name %>
             </p>
