--- a/trunk/app/views/application/headers/_zm_header.html.erb
+++ b/trunk/app/views/application/headers/_zm_header.html.erb
@@ -30,7 +30,7 @@
       <li class="dot"></li>
       <li class="<%= 'current' if schools_path==request.path %>"><a href="<%= schools_path %>">全部学校/老师</a></li>
       <li class="dot"></li>
-      <li class="<%= 'current' if maps_path==request.path %>"><a href="<%= maps_path %>">路线图</a></li>
+      <li class="<%= 'current' if maps_path==request.path %>"><a href="<%= maps_path %>">学习路线图</a></li>
       <li class="dot"></li>
       <li class="<%= 'current' if [surprise_path,
       videos_coursewares_path,
