--- a/trunk/app/views/coursewares/embed.html.erb
+++ b/trunk/app/views/coursewares/embed.html.erb
@@ -368,7 +368,7 @@ end
     <img alt="Kejian.TV课件交流系统" src="<%=asset_path 'embed_logo.png'%>" />
     <h5><a href="/coursewares/<%=@courseware.id%>" target="_parent"><%=@courseware.title%></a></h5>
     <a href="#" id="fullscreen">全屏</a>
-    <p>领域: <a href="/topics/<%=@courseware.topic_id%>" target="_parent"><%=@courseware.course_long_name%></a></p>
+    <p>领域: <a href="/topics/<%=@courseware.topic_id%>" target="_parent"><%=@courseware.title%></a></p>
 
   </div>
   <div id="slide">
