--- a/trunk/app/views/maps/index.html.erb
+++ b/trunk/app/views/maps/index.html.erb
@@ -1,3 +1,4 @@
+
 <% content_for :armpit do %>
   <%= stylesheet_link_tag "ktv/__kug.css", :media => "all" %>
 <% end %>
@@ -6,9 +7,7 @@
 <%= render file:'/application/headers/_zm_header' %>
 
 
-
-
-<div class="__kug">
+<div class="__kug" style="margin-top:2px">
 <div class="content index-content">
 	<div class="main">
 		<div class="section">
@@ -406,6 +405,7 @@
 </div>
 </div>
 
+
 <script type='text/javascript'>
 <% content_for :butt2 do %>
 $(function(){
@@ -414,3 +414,5 @@ $(function(){
 <% end %>
 </script>
 
+
+<%= render file:'/application/footers/_flo_footer' %>
