--- a/trunk/app/views/welcome/index__ibeike.html.erb
+++ b/trunk/app/views/welcome/index__ibeike.html.erb
@@ -36,7 +36,7 @@
           <tr>
             <td colspan="2" style="height:15px;overflow:hidden;font-weight:600">课件名称：</td>
         </tr><tr>
-            <td colspan="2" align="left"><%= cw.course_long_name %></td>
+            <td colspan="2" align="left"><%= cw.title %></td>
           </tr>
           <tr>
              <td colspan="2" style="width:60px;height:15px;overflow:hidden;font-weight:600">科&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;目：</td>
