--- a/trunk/app/views/coursewares/_upload.html.erb
+++ b/trunk/app/views/coursewares/_upload.html.erb
@@ -23,5 +23,5 @@
       </div>
     </div>
   </div><!-- /steps -->
-  <p id="ok_to_leave" style="display:none">此时您可安全地离开此页面，我们将在云端自动处理您的课件。</p>
+  <p id="ok_to_leave" style="display:none">此时您可安全地离开本页面，我们将在云端自动处理您的课件。</p>
 </div>
