--- a/trunk/app/views/welcome/index.html.erb
+++ b/trunk/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@
         <p>
           <%= image_tag 'p.png',:alt => '以前，我总要下课追着老师复制PPT；过去，面对一个难题的我苦于找不到人请教；曾几何时，我因靠前找不到足够的复习资料而惆怅不已。所有这些麻烦已经成为过去！通过课件交流系统，我可以迅速定位到我所学的领域，发现志同道合的人；分享我手中的资源，同时轻松下载他人发布的课件。' %>
         </p>
-          <p><a href="javascript:void(0)" id="loginhuge" class="button primary">用人人 / 微博 / QQ账号瞬间登录</a></p>
+          <p><a href="javascript:void(0)" id="loginhuge" class="button primary">关注我感兴趣的学科领域</a></p>
       </div>
       <div class="secondary_info">
         <div class="slide_frame">
