--- a/trunk/app/views/coursewares/show.html.erb
+++ b/trunk/app/views/coursewares/show.html.erb
@@ -55,11 +55,15 @@ KTV.data = {
     <div class="extras" style="float:right;margin-right:18px;margin-right:40px">
       <ul class="delimited" style="margin-bottom:0;border-top:none">
         <li class="like" style="border-top:none">
+        <% unless current_user and @courseware.user_id==current_user.id%>
           <% if thank_courseware_ed?(@courseware) %>
             <a href="javascript:void(0)" class="unlike purple" data-method="post" data-remote="true" rel="nofollow" id="weizuozhefasongganxie">已感谢</a>
           <% else %>
             <a href="javascript:void(0)" class="like grey" data-method="post" data-remote="true" rel="nofollow" id="weizuozhefasongganxie">向作者发送感谢</a>
           <% end %>
+        <% else %>
+            <a href="javascript:void(0)" class="like grey">收到的感谢</a>
+        <% end %>
           <a href="#fans" class="likes"><span id="weizuozhefasongganxie2"><%= @courseware.thanked_count %></span> 感谢</a>
         </li>
 
@@ -78,7 +82,7 @@ KTV.data = {
 
 <% case @courseware.sort.to_sym %>
 <% when :ppt,:pdf %>
-          <script async="async" class="speakerdeck-embed" data-course-slug="<%=@courseware.course.id%>" data-courseware-slug="<%=@courseware.id%>" data-ratio="<%= @courseware.wh_ratio %>" src="<%=asset_path 'ktv/embed.js'%>" type="text/javascript"></script>
+          <script async="async" class="speakerdeck-embed" data-course-slug="<%=@courseware.topic_id%>" data-courseware-slug="<%=@courseware.id%>" data-ratio="<%= @courseware.wh_ratio %>" src="<%=asset_path 'ktv/embed.js'%>" type="text/javascript"></script>
 <% when :webm %>
       <img src="/tmp1.png">
       <img src="/tmp2.png">
@@ -106,16 +110,24 @@ KTV.data = {
 
       <ul class="delimited">
           <li class="like">
-            <a href="javascript:void(0)" class="like grey" data-method="post" data-remote="true" rel="nofollow" id="weizuozhefasongganxie">为作者发送感谢</a>
+        <% unless current_user and @courseware.user_id==current_user.id%>
+          <% if thank_courseware_ed?(@courseware) %>
+            <a href="javascript:void(0)" class="unlike purple" data-method="post" data-remote="true" rel="nofollow" id="weizuozhefasongganxie">已感谢</a>
+          <% else %>
+            <a href="javascript:void(0)" class="like grey" data-method="post" data-remote="true" rel="nofollow" id="weizuozhefasongganxie">向作者发送感谢</a>
+          <% end %>
+        <% else %>
+            <a href="javascript:void(0)" class="like grey">收到的感谢</a>
+        <% end %>
             <a href="#fans" class="likes"><span id="weizuozhefasongganxie2"><%= @courseware.thanked_count %></span> 感谢</a>
           </li>
-        <li class="category">领域 <a href="/topics/<%= @courseware.topic_path %>"><%= @courseware.topic %></a></li>
+        <li class="category">领域 <a href="/topics/<%= @courseware.topic_id %>"><%= @courseware.topic %></a></li>
         <li class="dianjiliang">点击量 <a href="#watch-view-count"><%= number_with_delimiter @courseware.views_count %> 次</a></li>
               </ul>
 
       <h1><%=image_tag('share.png',alt:'分享')%></h1>
       <ul class="delimited share">
-        <li><a href="<%= @courseware.downpath %>" target="_blank" class="grey" id="share_pdf">下载源文件</a></li>
+        <li><a href="<%= download_courseware_path(@courseware)%>" target="_blank" class="grey" id="share_pdf">下载源文件</a></li>
       </ul>
     </div>
   </div>
