首页细节修正2

--- a/trunk/app/views/welcome/index.html.erb
+++ b/trunk/app/views/welcome/index.html.erb
@@ -8,9 +8,9 @@
   <section id="about" class="feature">
     <div class="wrapper">
       <div class="primary_info">
-        <h1><em><%= image_tag 'h1.png',:alt => '轻松分享' %></em><br><%= image_tag 'h2.png',:alt => '讲义·作业·复习资料·往年试卷·课堂录像' %></h1>
+        <h1><em><%= image_tag 'h1.png',:alt => '轻松分享' %></em><br><%= image_tag 'h2.png',:alt => '讲义·电子书·复习资料·解题互助·课堂录像' %></h1>
         <p>
-          <%= image_tag 'p.png',:alt => '以前，我总要下课追着老师复制PPT；过去，面对一个难题的我苦于找不到人请教；曾几何时，我因靠前找不到足够的复习资料而惆怅不已。所有这些麻烦已经成为过去！通过课件交流系统，我可以迅速定位到我所学的领域，发现志同道合的人；分享我手中的资源，同时轻松下载他人发布的课件。' %>
+          <%= image_tag 'p.png',:alt => '通过课件交流系统，您可以迅速定位最感兴趣的课程，轻松获取大家共同维护的最优质的一份学习资料。然而，课件系统不仅是一个出色的学习资源交流平台，她更是一个开放的在线学习社区。在这里，您可以把遇到的难题发出来，大家共同切磋，也可以让大家为您的学习目标出谋划策。在这里，我们共同进步！' %>
         </p>
           <p><a href="javascript:void(0)" id="loginhuge" class="button primary">关注我感兴趣的学科领域</a></p>
       </div>
